# widowxl_pick_and_place

./: .gitignore  README.md
interbotix_ros_core/interbotix_ros_xseries/interbotix_xs_sdk/config/: motor_configs_template.yaml
interbotix_ros_manipulators/interbotix_ros_xsarms/examples/python_demos/: bartender_widowxl.py  gripper_test.py  pick_and_place.py  simple_pick_place.py  test_drive.py  widowxl_mock_camera.py  widowxl_pick_place.py  widowxl_pick_place_auto.py
widowxl_moveit_config_oj/: .setup_assistant  CMakeLists.txt  geometry_msgs.msg  oldpackage.xml  package.xml
widowxl_moveit_config_oj/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  widowxl.srdf
widowxl_moveit_config_oj/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  realsense.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  widowxl_moveit_controller_manager.launch.xml
widowxl_moveit_config_oj/msg/: ObjectPose.msg
widowxl_moveit_config_oj/scripts/: basic_pick_place.py  colour_publisher.py  forward_kinematics.py  frag_ik.py  ik.py  ik_example.py  ik_solver.py  ik_test.py  object_pose_publisher.py  pick_and_place_node.py
(+17 files in other folders)
